--- a/composer.json
+++ b/composer.json
@@ -16,18 +16,13 @@
         }
     ],
     "require": {
-        "php": "^7.0"
+        "php": "^5.6"
     },
     "require-dev": {
-        "graham-campbell/analyzer": "^1.1",
         "larapack/dd": "^1.1",
         "league/flysystem": "^1.0",
-        "phpunit/phpunit": "^6.0",
-        "scrutinizer/ocular": "^1.5",
-        "symfony/console": "^3.2",
-        "symfony/css-selector": "^3.2",
-        "symfony/dom-crawler": "^3.2",
-        "twig/twig": "^1.28"
+        "phpunit/phpunit": "^3.7",
+        "scrutinizer/ocular": "^1.5"
     },
     "autoload": {
         "psr-4": {
